--- a/package.json
+++ b/package.json
@@ -22,21 +22,23 @@
     ]
   },
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
   "scripts": {
     "dev:gen-index-file": "concurrently 'yarn gen:index-file -w' 'yarn dev'",
     "dev": "webpack-dev-server --hot --config ./scripts/webpack/webpack.dev.js",
     "dev:open": "webpack-dev-server --hot --open --config ./scripts/webpack/webpack.dev.js",
-    "analyze": "ANALYZE=true NODE_ENV=production webpack --config ./scripts/webpack/webpack.prod.js",
+    "analyze": "rm -rf public && ANALYZE=true NODE_ENV=production webpack --config ./scripts/webpack/webpack.prod.js",
     "build": "rm -rf public && NODE_ENV=production webpack --config ./scripts/webpack/webpack.prod.js",
-    "lint": "eslint ./src/core/**/*.ts",
+    "lint": "eslint './src/**/*.ts' && eslint './src/**/*.tsx'",
+    "lint:fix": "eslint './src/**/*.ts' --fix && eslint './src/**/*.tsx' --fix",
     "test": "jest --watch",
     "test:coverage": "jest --coverage",
     "serve": "serve -l 8080 dist",
     "gen:ts-config": "node './scripts/generateTsConfig.js'",
-    "gen:index-file": "autogen-export -c -r",
-    "test:one": "jest -t --watch 'generateIndexTs'"
+    "gen:index-file": "autogen-export -c -r && yarn lint:fix",
+    "test:one": "jest -t --watch 'generateIndexTs'",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
     "@autogen-export/cli": "^4.0.7",
@@ -49,9 +51,16 @@
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.5.5",
     "@babel/types": "^7.5.5",
+    "@emotion/babel-preset-css-prop": "^10.0.17",
     "@emotion/core": "^10.0.17",
     "@emotion/styled": "^10.0.17",
     "@fullhuman/postcss-purgecss": "^1.2.0",
+    "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-links": "^5.2.1",
+    "@storybook/addon-storysource": "^5.2.1",
+    "@storybook/addon-viewport": "^5.2.1",
+    "@storybook/addons": "^5.2.1",
+    "@storybook/react": "^5.2.1",
     "@svgr/webpack": "^4.3.2",
     "@types/jest": "^24.0.15",
     "@types/react": "^16.8.23",
@@ -61,6 +70,7 @@
     "@typescript-eslint/parser": "^1.12.0",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
+    "babel-plugin-emotion": "^10.0.19",
     "babel-plugin-macros": "^2.6.1",
     "babel-plugin-tailwind-components": "^1.0.0-alpha.0",
     "babel-plugin-ts-optchain": "^1.1.5",
@@ -68,10 +78,12 @@
     "core-js": "3",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
+    "emotion": "^10.0.17",
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-config-react": "^1.1.7",
     "eslint-loader": "^2.2.1",
+    "eslint-plugin-emotion": "^10.0.14",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
     "fibers": "^4.0.1",
@@ -87,24 +99,28 @@
     "lqip-loader": "^2.2.0",
     "lqip.macro": "^0.1.5",
     "mini-css-extract-plugin": "^0.8.0",
+    "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
+    "postcss-scss": "^2.0.0",
     "prettier": "^1.18.2",
     "purgecss": "^1.3.0",
     "react-hot-loader": "^4.12.13",
+    "react-icons": "^3.7.0",
     "react-ideal-image": "^0.0.5",
     "sass": "^1.22.12",
     "sass-loader": "^8.0.0",
     "serve": "^11.1.0",
     "shallow-equal": "^1.2.0",
+    "storybook": "^5.1.11",
     "style-loader": "^1.0.0",
-    "tailwind.macro": "^0.5.10",
+    "tailwind.macro": "^1.0.0-alpha.10",
     "tailwindcss": "^1.1.2",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "ts-optchain": "^0.1.8",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.5.3",
+    "typescript": "3.5.3",
     "webpack": "^4.35.2",
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.3.5",
