--- a/package.json
+++ b/package.json
@@ -72,7 +72,6 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-emotion": "^10.0.19",
     "babel-plugin-macros": "^2.6.1",
-    "babel-plugin-tailwind-components": "^1.0.0-alpha.0",
     "babel-plugin-ts-optchain": "^1.1.5",
     "concurrently": "^4.1.2",
     "core-js": "3",
@@ -121,6 +120,7 @@
     "ts-optchain": "^0.1.8",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "3.5.3",
+    "use-media": "^1.4.0",
     "webpack": "^4.35.2",
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.3.5",
