--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "lint:fix": "eslint './src/**/*.ts' --fix && eslint './src/**/*.tsx' --fix",
     "test": "jest --watch",
     "test:coverage": "jest --coverage",
-    "serve": "serve -l 8080 dist",
+    "serve": "serve -l 8080 public",
     "gen:ts-config": "node './scripts/generateTsConfig.js'",
     "gen:index-file": "autogen-export -c -r && yarn lint:fix",
     "test:one": "jest -t --watch 'generateIndexTs'",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "e2e:open": "cypress open"
   },
   "devDependencies": {
     "@autogen-export/cli": "^4.0.7",
@@ -51,9 +52,6 @@
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.5.5",
     "@babel/types": "^7.5.5",
-    "@emotion/babel-preset-css-prop": "^10.0.17",
-    "@emotion/core": "^10.0.17",
-    "@emotion/styled": "^10.0.17",
     "@fullhuman/postcss-purgecss": "^1.2.0",
     "@storybook/addon-actions": "^5.2.1",
     "@storybook/addon-links": "^5.2.1",
@@ -62,22 +60,25 @@
     "@storybook/addons": "^5.2.1",
     "@storybook/react": "^5.2.1",
     "@svgr/webpack": "^4.3.2",
+    "@types/classnames": "^2.2.9",
     "@types/jest": "^24.0.15",
+    "@types/node": "^12.7.8",
     "@types/react": "^16.8.23",
     "@types/react-redux": "^7.1.1",
     "@types/react-router": "^5.0.3",
     "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/parser": "^1.12.0",
     "autoprefixer": "^9.6.1",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
-    "babel-plugin-emotion": "^10.0.19",
     "babel-plugin-macros": "^2.6.1",
     "babel-plugin-ts-optchain": "^1.1.5",
+    "classnames": "^2.2.6",
     "concurrently": "^4.1.2",
-    "core-js": "3",
+    "core-js": "2",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
-    "emotion": "^10.0.17",
+    "cypress": "^3.4.1",
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-config-react": "^1.1.7",
@@ -85,6 +86,7 @@
     "eslint-plugin-emotion": "^10.0.14",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
+    "favicons-webpack-plugin": "^1.0.2",
     "fibers": "^4.0.1",
     "file-loader": "^4.1.0",
     "fork-ts-checker-notifier-webpack-plugin": "^1.0.2",
@@ -99,18 +101,13 @@
     "lqip.macro": "^0.1.5",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-flexbugs-fixes": "^4.1.0",
-    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-scss": "^2.0.0",
+    "postcss-nested": "^4.1.2",
     "prettier": "^1.18.2",
     "purgecss": "^1.3.0",
     "react-hot-loader": "^4.12.13",
     "react-icons": "^3.7.0",
-    "react-ideal-image": "^0.0.5",
-    "sass": "^1.22.12",
-    "sass-loader": "^8.0.0",
     "serve": "^11.1.0",
-    "shallow-equal": "^1.2.0",
     "storybook": "^5.1.11",
     "style-loader": "^1.0.0",
     "tailwind.macro": "^1.0.0-alpha.10",
@@ -120,25 +117,26 @@
     "ts-optchain": "^0.1.8",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "3.5.3",
+    "url-loader": "^2.1.0",
     "use-media": "^1.4.0",
     "webpack": "^4.35.2",
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2",
     "webpack-merge": "^4.2.1",
-    "webpack-notifier": "^1.8.0"
+    "webpack-notifier": "^1.8.0",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "dependencies": {
     "@hot-loader/react-dom": "^16.9.0",
-    "babel-jest": "^24.8.0",
     "formik": "^1.5.8",
     "immer": "^3.1.3",
+    "linaria": "^1.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-redux": "^4.0.8",
-    "react-waypoint": "8.0.3",
     "redux": "^4.0.4",
     "redux-starter-kit": "^0.6.1",
     "yup": "^0.27.0"
